# lis3mdl-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
examples/hard_iron_stm32f401re/: Cargo.toml  README.md
examples/hard_iron_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
src/: lib.rs  prelude.rs
src/register/: main.rs
