[package]
authors = ["STMircroelectronics"]
edition = "2021"
readme = "README.md"
name = "read_data_polling_stm32f401re"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
lis3mdl-rs = "1.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401"]

# this lets you use `cargo fix`!
[[bin]]
name = "read_data_polling_stm32f401re"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# The macro below is used to configure the bit order as Most Significant Bit.
# By default the bit order is assumed as Least Significant Bit.
[features]
bit_order_msb = ["lis3mdl-rs/bit_order_msb"]